--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "pydantic-settings>=2.10.1",
     "sqlalchemy>=2.0.41",
     "uvicorn>=0.34.3",
+    "uvloop>=0.21.0",
 ]
 
 
