--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "psycopg2-binary>=2.9.10",
     "pydantic>=2.11.7",
     "pydantic-settings>=2.10.1",
+    "requests>=2.32.4",
     "sqlalchemy>=2.0.41",
     "uvicorn>=0.34.3",
     "uvloop>=0.21.0",
