--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,11 +8,12 @@ repos:
       args: [ --fix ]
     # Run the formatter.
     - id: ruff-format
+
 - repo: local
   hooks:
     - id: ty-check
       name: type check
+      types: [python]
       language: system
-      always_run: true
       entry: ty check
       pass_filenames: false
